ZVP defining characteristics in 3D

--- a/Oxford_Thesis.tex
+++ b/Oxford_Thesis.tex
@@ -73,7 +73,7 @@
 
 %%%%% THESIS / TITLE PAGE INFORMATION
 % Everybody needs to complete the following:
-\title{The laser-plasma surface interaction: towards attosecond sources of light}
+\title{Attosecond light: the laser-plasma surface interaction}
 \author{Robin Timmis}
 \college{Your College}
 
