--- a/text/ch2-zvp.tex
+++ b/text/ch2-zvp.tex
@@ -329,10 +329,10 @@ ponderomotvie + ZVP which at most would be twice the predicted gamma which is qu
 Earlier write something along the lines of explaining while ZVP absorption does represent laser energy absorption, bulk heating occurs rather indirectly.
 
 \section{Defining characteristics of the ZVP mechanism}
-In the original paper on the ZVP mechanism, T. Baeva \textit{et al} \cite{baevaZeroVectorPotential2011} outlined 6 defining characteristics of the \ac{ZVP} mechanism, namely,
+In her original paper on the ZVP mechanism, T. Baeva \textit{et al} \cite{baevaZeroVectorPotential2011} outlined 6 defining characteristics of the \ac{ZVP} mechanism, namely,
 \begin{enumerate}
-	\item The existance of vector potential zeros moving through the skin layer in the laboratory frame;
-	\item The existance of zeroes in the incident laser pulse vector potential required for the formation of fast electron bunches;
+	\item The existence of vector potential zeros moving through the skin layer in the laboratory frame;
+	\item The existence of zeroes in the incident laser pulse vector potential required for the formation of fast electron bunches;
 	\item The generation of fast electron bunches with ultra-short temporal duration;
 	\item That such fast electron bunches follow the energy scalingings of equations \ref{eq:zvp_Tzvp} and total energy \ref{eq:zvp_Uzvp};
 	\item Injection of the fast electron bunches is along the propagation axis of the laser pulse;
@@ -417,9 +417,42 @@ The 3D simulation parameters were chosen to be consistent with previous work on 
 \end{figure}
 The two simulations are compared in figure \ref{fig:zvp3dcomparelowres}. Good convergence is qualitatively demonstrated by the presence of characteristic features of the ZVP mechanism. While the instabilities are similar in structure, the change in seeding changes their exact positions. As instabilities are not the focus of this thesis this variation is of no concern. Note that while general characteristics remain similar, some caution is advisable when considering quantitative results.
 
-Following the success in reproducing the key features of the \ac{ZVP} mechanism and demonstrated consistency between 2 and 3D equivalent simulations, the remainder of this chapter will predominantly utilise 2D simulations to interrogate the mechanism further.
+
+\subsubsection{Confirmation of ZVP in 3D}
+Figure \ref{fig:zvppropagatingzero} tracks the tranverse momentum distribution along the polarisation axis of the laser pulse of an electron bunch during its ablative journey, clearly demonstrating the existence of a singular zero of the vector potential propagating through the electron bunch.
+% TODO: \usepackage{graphicx} required
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{figures/zvp/zvp_propagating_zero}
+	\caption[Propagation of zeroes through the ablating ZVP electron bunch.]{Propagation of zeroes through the ablating ZVP electron bunch via the proxy of tranverse momentum conservation. The zero of the vector potential exists where the transverse momentum is macroscopically zero. Each line represents a timestep with time increasing with decreasing colour. With increasing time the bunch and the zero move in the -$\hat{mathbf{x}}$-direction with the zero overtaking the electron bunch. The inset tracks the position of the zero of the vector potential with time.}
+	\label{fig:zvppropagatingzero}
+\end{figure}
+The zero propagates at a speed of $\approx 1.4c$. The zero propagates through the bunch before it finishes crossing the pseudocapacitor and thus before it has acquired a significant velocity. This provides a new angle from which to consider the process of \ac{HHG}. \ac{CSE} is emitted in a sharp burst as the zero passes through the bunch. To maximise the efficiency of higher order generation ($n$th harmonic spectrum intensity scaling as $\sim n^{-4/3}$) requires the advance time bunch emission width to be minimised. Increased bunch velocity decreases the velocity of the vector potential, thus increasing the advance time coherency. Naturally, increasing $a_0$ will increase the bunch velocity but it could be interesting to consider what conditions possibly delay the propagation of the zero.
+
+Further simulation results a presented in figure \ref{fig:zvp3ddynamics}.
+% TODO: \usepackage{graphicx} required
+\begin{figure}
+	\centering
+	\includegraphics[width=1\linewidth]{figures/zvp/zvp_3D_dynamics}
+	\caption[Electron dynamics in 3D PIC simulation for both linear and cirularly polarised relativistic laser pulses.]{Electron dynamics in a 3D PIC simulation. a) and b) Electron energy density for linearly and circularly polarised laser pulses respectively. c) and d) Electron longitudinal momentum for linearly and circularly polarised laser pulses respectively.  e) Electron density at the plasma surface streaked in time. f) Electron energy density at the plasma surface streaked in time.}
+	\label{fig:zvp3ddynamics}
+\end{figure}
+In figures \ref{fig:zvp3ddynamics}a)-d), comparisons are made in the electron energy distributions for simulations with zeros present in the vector potential (linearly polarised) and without (circularly polarised. Clearly zeroes are required for the formation of high energy, short duration attosecond bunches. From figure \ref{fig:zvp3ddynamics}a) it is clear that electron bunches are injected and propagate through the plasma bulk in the laser propagation direction. Figure \ref{fig:zvp3ddynamics}c) demonstrates the quasi-monoenergeticity of the high energy electron bunches as initially identified in 1D by Baeva. Although the shape in the phase space is more complex in 3D, the attosecond duration at a given energy is retained. Figures \ref{fig:zvp3ddynamics}e) and f) describe the surface dynamics. One can observe the high density bunches on the front surface with the peak in energy density occuring after acceleration across the pseudocapacitor. Figure \ref{fig:zvp3ddynamics}f) also explains the shape of the spectrum of figure \ref{fig:zvp3ddynamics}c), low energy electrons are turned back first and as all bunch electrons are ultrarelativistic, the higher energy electrons trail behind.
+
+Finally figure \ref{label} compares the spectra of the reflected light in the presence and absence of zeros of the vector potential.
+% TODO: \usepackage{graphicx} required
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{"../../../Library/Mobile Documents/com~apple~CloudDocs/Documents/Oxford/DPhil/Sims/Smilei/3D/plots_ZVP_confirmation/zvp_hhg_beam_fourier"}
+	\caption[The Fourier transform of the reflected laser pulse in 3D PIC simulations.]{The Fourier transform of the reflected laser pulse in 3D PIC simulations both with and without zeroes in the vector potential.}
+	\label{fig:zvphhgbeamfourier}
+\end{figure}
+Unfortunately the simulation resolution is too low to resolve the individual harmonics however, the spectrum from the circularly polarised light is typically over two orders of magnitude below that for linearly polarised light. Thus, all defining characteristics of the ZVP mechanism have been identified in 3D simulations with the notable exception of the energy scalings. Next generation supercomputers will be required to perform such parameter scans.
+
+\textbf{**To do: these dynamics plots need fixing. Should add the times, also e and f have distance instead of time on y axis, also need to convert from timstep to time. D) needs teh scale changing. also the x axis needs converting to distance.**}
+
 \subsection{The ZVP electron bunch}
- Previous work on the ZVP mechanism has highlighted the high energ and short duration of electron bunches, however, until now much of the quantitative discussion of the properties of such bunches has avoided interrogation. A ZVP electron bunch is an electron bunch produced via the ZVP mechanism. Once produced and accelerated across the pseudocapacitor field, it is launched back in the laser propagation direction. While the bunch has no spatial separation over energies when propagating with the zero of the vector potential, the turning point of the electrons is longitudinal momentum dependent due to the Coulomb attraction of the ions after overshooting the pseudocapacitor field. Baeva \textit{et al} showed that the electron bunch has a quasi-monoenergetic spectrum: there is a one-to-one relationship between energy and position with the higher energies trailing the lower energies. The full bunch is confined to 130 as while a single energy confined to 5 as. If, however, the plasma bulk is transversely mass-limited relative to the laser spot size,when rotated back towards the plasma block, some of the electron bunch will overshoot and escape the potential well without significant stretching of the bunch in time as can be seen in figure \ref{fig:zvp3d}. Such electron bunches (retain the initial energy spread???? ie fast first as disucssed in RES paper) retain their high charge density and ultra-short duration. ZVP electron bunches can therefore be placed into two categories: ultra-high charge, ultra-short duraction electron bunches from mass-limited targets, hereafter labelled mass-limited electron bunches, of interest due to their unique properties and bulk propagating bunches, hereafter labelled bulk bunches, which have lower charge densities, are imprinted with instabilities and are instead of interest due to their connection to energy absorption and reflection in this post-ponderomotive regime.
+Following the success in reproducing the key features of the \ac{ZVP} mechanism and demonstrated consistency between 2 and 3D equivalent simulations, the remainder of this chapter will predominantly utilise 2D simulations to interrogate the mechanism further. Previous work on the ZVP mechanism has highlighted the high energ and short duration of electron bunches, however, until now much of the quantitative discussion of the properties of such bunches has avoided interrogation. A ZVP electron bunch is an electron bunch produced via the ZVP mechanism. Once produced and accelerated across the pseudocapacitor field, it is launched back in the laser propagation direction. While the bunch has no spatial separation over energies when propagating with the zero of the vector potential, the turning point of the electrons is longitudinal momentum dependent due to the Coulomb attraction of the ions after overshooting the pseudocapacitor field. Baeva \textit{et al} showed that the electron bunch has a quasi-monoenergetic spectrum: there is a one-to-one relationship between energy and position with the higher energies trailing the lower energies. The full bunch is confined to 130 as while a single energy confined to 5 as. If, however, the plasma bulk is transversely mass-limited relative to the laser spot size,when rotated back towards the plasma block, some of the electron bunch will overshoot and escape the potential well without significant stretching of the bunch in time as can be seen in figure \ref{fig:zvp3d}. Such electron bunches (retain the initial energy spread???? ie fast first as disucssed in RES paper) retain their high charge density and ultra-short duration. ZVP electron bunches can therefore be placed into two categories: ultra-high charge, ultra-short duraction electron bunches from mass-limited targets, hereafter labelled mass-limited electron bunches, of interest due to their unique properties and bulk propagating bunches, hereafter labelled bulk bunches, which have lower charge densities, are imprinted with instabilities and are instead of interest due to their connection to energy absorption and reflection in this post-ponderomotive regime.
  
  To investigate these two bunch types further, 2D PIC simulations were performed, see appendix for parameters. Figure blah is reprentative.
  
@@ -598,21 +631,25 @@ Preparations are now underway. The requirements for this experiment are simple: 
 \begin{figure}
 	\centering
 	\includegraphics[width=1\linewidth]{figures/zvp/Experiment_setup_HHG_bunches2}
-	\caption[Planned GEMINI-PW experimental setup for the measurement of ZVP electron bunches.]{A simulation of the planned GEMINI-PW experimental setup for the measurement of ZVP electron bunches. This novel setup enables the simultaneous measurement of attosecond ZVP electron bunches and their coherent emission of X-ray light. The GEMINI-PW laser pulse is incident at 45\degree on the low density polyethylene target with a preplasma scale length of $0.2\lambda_\mathrm{L}$. For this angle of incidence, transmitted bunches and specularly reflected X-ray harmonics are produced at a frequency of $\omega_\mathrm{L}$.}
+	\caption[Planned GEMINI-PW experimental setup for the measurement of ZVP electron bunches.]{A simulation of the planned GEMINI-PW experimental setup for the measurement of ZVP electron bunches. This novel setup enables the simultaneous measurement of attosecond ZVP electron bunches and their coherent emission of X-ray light. The GEMINI-PW laser pulse is incident at \qty{45}{\degree} on the low density polyethylene target with a preplasma scale length of $0.2\lambda_\mathrm{L}$. For this angle of incidence, transmitted bunches and specularly reflected X-ray harmonics are produced at a frequency of $\omega_\mathrm{L}$.}
 	\label{fig:experimentsetuphhgbunches2}
 \end{figure}
 By focusing the laser onto the edge of a transversely mass-limited target, the emitted electron bunch energies will be maximised. Simulations suggest it should be possible to simultaneously measure the specularly reflected \ac{HHG} and the attosecond ZVP electron bunches that produce it. Directly linking the bunch qualities to the properties of the \ac{HHG}. 
 
 Remaining actions include the performance of PIC code simulation parameter scans in the new geometry. While normal incidence was most convenient for these initial simulations, oblique incidence is more optimal for \ac{HHG} \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011, edwardsXRayEmissionEffectiveness2020} and as can be understood from equations \ref{eq:zvp_Tzvp_theta} and \ref{eq:zvp_Uzvp_theta}, the new energy scaling expressions for the ZVP mechanism at oblique incidence. Not only is oblique preferable but it is essential to mitigate damage to the laser optics via back-reflection. The \ac{HHG} beam intensity at focus can be over 1000 times that of the incident laser pulse \cite{quereReflectingPetawattLasers2021}. It is necessary, therefore, to test the new predictions for oblique incidence energy scalings and total electron bunch charge as well as the angle of bunch ejection, the non-zero transverse vector potential of the laser will prevent the bunch from propagating directly along the transmission axis. It would also be useful to perform a parameter scan of preplasma scale length. In this work so far, it was assumed that the optima for electron bunch production are simply those for \ac{HHG} given the intrinsic link between the two. \textbf{CITE THESE}. 
 
-\subsection{GEMINI-PW laser facility}
+\subsubsection{GEMINI-PW laser facility}
+The GEMINI-PW laser facility housed at the \ac{CLF} is a petawatt class facility consisting of two 30 fs beams each delivering a maximum focused intensity of \qty{2e21}{W.cm^{-2}} at a repetition rate of 0.05 Hz. Such high frequency of operation has led to a paradigm shift in high power laser physics experimentation with the arrival of statistically significant results.
+
 
 \subsubsection{Targets}
-A range of thick, flat solid targets are proposed to probe the density parameter space: diamond, a selection of plastics (polymethyl methacrylate, low and high density polyethylene and polycarbonate) and mirrored targets, which produced interesting and slightly unexpected results in the ORION experiment. Target wheels will be used to take full advantage of the high shot rate of the GEMINI-PW laser. It is anticipated that due to focal spot jitter, not all shots will hit the target edges. 
+A range of thick, flat solid targets are proposed to probe the density parameter space: diamond, a selection of plastics (polymethyl methacrylate, low and high density polyethylene and polycarbonate) and mirrored targets, which produced interesting and slightly unexpected results in the ORION experiment. It would also be interesting to produce foam targets gaining access the optimal low $S$ regime \cite{batani_2014_PhysicsIssuesShock}. Target wheels will be used to take full advantage of the high shot rate of the GEMINI-PW laser. It is anticipated that due to focal spot jitter, not all shots will hit the target edges. 
 
 \subsubsection{Diagnostics}
-The electron bunches will be measured using an electron spectrometer placed a few centimetres from the target to measure the time-integrated energy spectrum. The spectrometer will be shielded from the laser pulse and any \ac{HHG} in transmission using a flash coated kapton foil which should not significantly hinder the MeV electron bunches. Mordovanakis \textit{et al} used Image Plate stacks to obtain the electron bunch structure and emission angle, it may be necessary to perform this first to ensure the bunches are captured by the spectrometer. While resolving attosecond durations remains an outstanding challenge of experimental science, it may be possible to measure the total duration of the train of attosecond electron bunches by measuring the characteristics of coherent optical transition radiation produced by the electrons upon incidence on a secondary target \cite{linIsolatedAttosecondElectron2020}. The X-ray \ac{HHG} emission will be measured using the OHREX spectrometer \cite{beiersdorferLineshapeSpectroscopyVery2016}, a spherically bent crystal spectrometer with ultra-high resolution and high-signal-to-noise ratio. Lower order harmonics will be measured using angularly resolving EUV spectrometers. Note that in the absence of attosecond resolution diagnostics, measuring the harmonic spectrum of the coherent \ac{HHG} is the only way to reconstruct the temporal shape of the pulse. Simulations have suggested that the reflected spectrum produced by Coherent Synchrotron Emission of the electron bunches is approximately Fourier-limited \cite{cousensElectronTrajectoriesAssociated2020}.
+The electron bunches will be measured using an electron spectrometer placed a few centimetres from the target to measure the time-integrated energy spectrum. The spectrometer will be shielded from the laser pulse and any \ac{HHG} in transmission using a flash coated kapton foil which should not significantly hinder the MeV electron bunches produced in the interaction. Mordovanakis \textit{et al} used Image Plate stacks to obtain the electron bunch structure and emission angle, it may be necessary to perform this first to accurately position the spectrometer. While resolving attosecond durations remains an outstanding challenge of experimental science, it may be possible to measure the total duration of the train of attosecond electron bunches by measuring the characteristics of coherent optical transition radiation produced by the electrons upon incidence on a secondary target \cite{linIsolatedAttosecondElectron2020}. The X-ray \ac{HHG} emission will be measured using the OHREX spectrometer \cite{beiersdorferLineshapeSpectroscopyVery2016} on loan from ORION, a spherically bent crystal spectrometer with ultra-high resolution and high-signal-to-noise ratio. Lower order harmonics will be measured using angularly resolved EUV spectrometers. Note that in the absence of attosecond resolution diagnostics, measuring the harmonic spectrum of the coherent \ac{HHG} is the only way to reconstruct the temporal shape of the pulse. Simulations have suggested that the reflected spectrum produced by Coherent Synchrotron Emission of the electron bunches is approximately Fourier-limited \cite{cousensElectronTrajectoriesAssociated2020}. Off-axis spectrometers should be used to compare the signals to the background emission and to measure the plasma temperature \cite{akli_2010_DualChannelXray}. A quarter wave plate could be used to convert the incoming laser pulse to a circular polarisation to compare the signals to those detected in the absence of zeros in the vector potential.
+
+\subsubsection{Preplasma scale lengths and prepulse control}
+Observation of the ZVP mechanism requires a sufficiently steep density gradients at the laser-plasma interface. A potential drawback of \ac{CPA} laser systems is the existence of prepulses that heat targets, causing them to expand significantly before arrival of the main pulse. To increase the laser contrast, to the point where there is no preplasma formation, GEMINI-PW utilises a Double Plasma Mirror setup \cite{doumyCompleteCharacterizationPlasma2004}. Each mirror is an anti-reflection coated optic placed in the path of the laser beam, acting as an optical switch. As the laser fluence passes the damage threshold of the optic, plasma forms on the front surface and the mirror starts to reflect. As it has been suggested that there is an optimum scale length for \ac{HHG}, the second GEMINI-PW beam will be used to generate a controllable prepulse to tailor the plasma surface. Investigation of preplasma generation will occur in parallel to the main experimental goals.
 
 
-
-\section{Conclusion}
+\section{Conclusions}
